<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.conversion.ConvertActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_border"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingEnd="60dp"
        android:paddingStart="60dp">

        <TextView
            android:id="@+id/txt_currency_rate_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_value"
            android:textColor="@color/black"
            android:textSize="@dimen/convert_textSize" />

        <TextView
            android:id="@+id/txt_currency_code_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/convert_padding"
            android:text="USD"
            android:textColor="@color/black"
            android:textSize="@dimen/convert_textSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equal"
            android:textColor="@color/black"
            android:textSize="@dimen/convert_textSize" />

        <TextView
            android:id="@+id/txt_currency_rate_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/convert_padding"
            android:textColor="@color/black"
            android:textSize="@dimen/convert_textSize"
            tools:text="0.82443" />

        <TextView
            android:id="@+id/txt_currency_code_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="EUR"
            android:textColor="@color/black"
            android:textSize="@dimen/convert_textSize" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:paddingTop="35dp"
        android:paddingBottom="35dp"
        android:paddingEnd="35dp"
        android:paddingStart="35dp"
        android:background="@drawable/custom_border"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_firstConversion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_currency_flag_from"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/currency_flag"
                android:src="@drawable/flag_dollar" />

            <EditText
                android:id="@+id/et_firstConversion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:hint="@string/from"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_secondConversion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_currency_flag_to"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/currency_flag"
                android:src="@drawable/flag_euro" />

            <EditText
                android:id="@+id/et_secondConversion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:hint="@string/to"
                android:inputType="number" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>